# webhook-gateway

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: deploy-dokploy.sh  deploy-worker.sh  populate-kv.sh  redeploy.sh
services/webhook_gateway/: db.py  forwarder.py  main.py  models.py  signatures.py
services/webhook_gateway/static/: style.css
services/webhook_gateway/templates/: base.html  dashboard.html  endpoints.html
tests/webhook_gateway/: test_api.py  test_db.py  test_forwarder.py  test_models.py  test_signatures.py
workers/webhook-ingest/: package.json  wrangler.toml
workers/webhook-ingest/src/: index.ts
