[project]
name = "webhook-gateway"
version = "1.0.0"
description = "Webhook gateway with web UI, Cloudflare tunnel ingestion, and Alerta forwarding"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

# The app runs from source (services.webhook_gateway on sys.path), not as an
# installed package. Declaring no modules disables setuptools auto-discovery —
# which otherwise fails on the flat layout (services/, workers/, deploy/) — and
# makes `pip install .` install only the dependencies (matching the Dockerfile).
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
